Find的模块的构建

--- a/TodayHealine/View/Follow/Follow.storyboard
+++ b/TodayHealine/View/Follow/Follow.storyboard
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="wDH-oo-jZh">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Follow View Controller-->
         <scene sceneID="vkc-wH-bDS">
             <objects>
-                <viewController id="92r-AM-zKt" sceneMemberID="viewController">
+                <viewController id="92r-AM-zKt" customClass="FollowViewController" customModule="TodayHealine" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Gns-Wu-krI"/>
                         <viewControllerLayoutGuide type="bottom" id="YIo-fL-FsP"/>
@@ -31,7 +34,6 @@
                     <tabBarItem key="tabBarItem" title="关注" id="nJd-U0-7h6"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4_7.fullscreen"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="knV-WD-hhi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
