--- a/TodayHealine/View/Find/RecTableViewCell.xib
+++ b/TodayHealine/View/Find/RecTableViewCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecTableViewCell" id="KGk-i7-Jjw" customClass="RecTableViewCell" customModule="TodayHealine" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecTableViewCell" rowHeight="82" id="KGk-i7-Jjw" customClass="RecTableViewCell" customModule="TodayHealine" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="82"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="XYv-W7-1XT">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="d4p-TD-YQI">
                             <size key="itemSize" width="50" height="50"/>
@@ -27,14 +27,28 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J74-lf-GHj">
+                        <rect key="frame" x="0.0" y="76" width="320" height="5"/>
+                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="0.77068172089041098" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="5" id="9RM-lK-96e"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="XYv-W7-1XT" secondAttribute="trailing" id="9iV-h9-J1j"/>
-                    <constraint firstItem="XYv-W7-1XT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="B2B-8g-wZT"/>
-                    <constraint firstAttribute="bottom" secondItem="XYv-W7-1XT" secondAttribute="bottom" id="bYH-Do-BfE"/>
-                    <constraint firstItem="XYv-W7-1XT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="dAx-VX-SCr"/>
+                    <constraint firstItem="XYv-W7-1XT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8Dn-5U-WDa"/>
+                    <constraint firstAttribute="bottom" secondItem="J74-lf-GHj" secondAttribute="bottom" id="NVR-bH-SXx"/>
+                    <constraint firstItem="XYv-W7-1XT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ZWQ-B2-xR9"/>
+                    <constraint firstAttribute="trailing" secondItem="XYv-W7-1XT" secondAttribute="trailing" id="a1Y-r8-iqa"/>
+                    <constraint firstAttribute="trailing" secondItem="J74-lf-GHj" secondAttribute="trailing" id="dWt-uE-wVP"/>
+                    <constraint firstItem="J74-lf-GHj" firstAttribute="top" secondItem="XYv-W7-1XT" secondAttribute="bottom" id="qEN-Z0-Vm0"/>
+                    <constraint firstItem="J74-lf-GHj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="sqm-3a-Vib"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="collectionView" destination="XYv-W7-1XT" id="em3-gD-0mZ"/>
+            </connections>
+            <point key="canvasLocation" x="51" y="139"/>
         </tableViewCell>
     </objects>
 </document>
