--- a/TodayHealine/View/Find/HotTableViewCell.xib
+++ b/TodayHealine/View/Find/HotTableViewCell.xib
@@ -10,31 +10,46 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HotTableViewCell" id="KGk-i7-Jjw" customClass="HotTableViewCell" customModule="TodayHealine" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HotTableViewCell" rowHeight="115" id="KGk-i7-Jjw" customClass="HotTableViewCell" customModule="TodayHealine" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="114"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="2ln-pl-a4z">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="7J8-zG-Dp9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="109"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hUq-NM-USu">
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="9qh-Kk-rDu">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HVa-5i-hYh">
+                        <rect key="frame" x="0.0" y="109" width="320" height="5"/>
+                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="0.77068172089999998" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="5" id="F0D-NQ-P6x"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="2ln-pl-a4z" secondAttribute="trailing" id="3xs-pY-x7c"/>
-                    <constraint firstItem="2ln-pl-a4z" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="CLh-15-xev"/>
-                    <constraint firstAttribute="bottom" secondItem="2ln-pl-a4z" secondAttribute="bottom" id="LEz-qs-hKC"/>
-                    <constraint firstItem="2ln-pl-a4z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="O6q-hX-NJr"/>
+                    <constraint firstAttribute="trailing" secondItem="7J8-zG-Dp9" secondAttribute="trailing" id="41m-3Q-zLL"/>
+                    <constraint firstAttribute="trailing" secondItem="HVa-5i-hYh" secondAttribute="trailing" id="5vF-rn-Vb3"/>
+                    <constraint firstItem="7J8-zG-Dp9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="T5d-AF-eha"/>
+                    <constraint firstAttribute="bottom" secondItem="HVa-5i-hYh" secondAttribute="bottom" id="o4q-ak-53Q"/>
+                    <constraint firstItem="7J8-zG-Dp9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="pGW-G8-KfQ"/>
+                    <constraint firstItem="HVa-5i-hYh" firstAttribute="top" secondItem="7J8-zG-Dp9" secondAttribute="bottom" id="r5w-4t-nsZ"/>
+                    <constraint firstItem="HVa-5i-hYh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="vab-Eq-cWY"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="collectionView" destination="7J8-zG-Dp9" id="x97-vH-s9o"/>
+                <outlet property="divierLine" destination="HVa-5i-hYh" id="Htx-Ir-kGW"/>
+            </connections>
+            <point key="canvasLocation" x="34" y="155.5"/>
         </tableViewCell>
     </objects>
 </document>
