--- a/TodayHealine/View/Find/RecomendCollectionViewCell.xib
+++ b/TodayHealine/View/Find/RecomendCollectionViewCell.xib
@@ -39,7 +39,7 @@
             </constraints>
             <size key="customSize" width="149" height="120"/>
             <connections>
-                <outlet property="imageView" destination="4dS-6x-cav" id="XJM-Qs-lOw"/>
+                <outlet property="iconView" destination="4dS-6x-cav" id="Hip-vi-EnD"/>
                 <outlet property="titleLabel" destination="ov8-gq-luz" id="ZMP-YI-D7f"/>
             </connections>
             <point key="canvasLocation" x="83.5" y="89"/>
