--- a/TodayHealine/View/Follow/Follow.storyboard
+++ b/TodayHealine/View/Follow/Follow.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="wDH-oo-jZh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="wDH-oo-jZh">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Follow View Controller-->
+        <!--View Controller-->
         <scene sceneID="vkc-wH-bDS">
             <objects>
-                <viewController id="92r-AM-zKt" customClass="FollowViewController" customModule="TodayHealine" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="92r-AM-zKt" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Gns-Wu-krI"/>
                         <viewControllerLayoutGuide type="bottom" id="YIo-fL-FsP"/>
