--- a/TodayHealine/View/Follow/Follow.storyboard
+++ b/TodayHealine/View/Follow/Follow.storyboard
@@ -4,14 +4,15 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Follow View Controller-->
         <scene sceneID="vkc-wH-bDS">
             <objects>
-                <viewController id="92r-AM-zKt" sceneMemberID="viewController">
+                <viewController id="92r-AM-zKt" customClass="FollowViewController" customModule="TodayHealine" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Gns-Wu-krI"/>
                         <viewControllerLayoutGuide type="bottom" id="YIo-fL-FsP"/>
